--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Zhen Zhu"
   pronouns         : # example: "he/him"  
-  bio              : "I am a third-year master student at ME, Tsinghua University. Nice to meet you!"
+  bio              : "Seeking PhD program in Micro-Nano Fabrication and Measurement"
   location         : "Shenzhen, Guangdong"
   employer         : "Tsinghua University"
   uri              : # URL
@@ -43,7 +43,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "zhenzhuzz@github.io"
+  github           : "zhenzhuzz.github.io"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "www.linkedin.com/in/zhenzhuzz"
+  linkedin         : "www.linkedin.com/in/zhenzhuzz/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
