--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Seeking PhD program in Micro-Nano Fabrication and Measurement"
   location         : "Shenzhen, Guangdong"
   employer         : "Tsinghua University"
-  uri              : # URL
+  uri              : "zhenzhuzz.github.io"
   email            : "zhenzhu600@163.com" 
 
   # Academic websites
@@ -43,7 +43,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "zhenzhuzz.github.io"
+  # github           : "zhenzhuzz.github.io"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "www.linkedin.com/in/zhenzhuzz/"
+  linkedin         : "/in/zhenzhuzz/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
