--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
   - title: "Activities"
     url: /activities/  
     
-  - title: "CV"
+  - title: "CV (PDF)"
     url: /CV_ZhenZhu.pdf/
     # url: /cv/
     
