--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
     url: /awards/    
 
   - title: "Activities"
-    url: /activities/  
+    url: /portfolio/  
     
   - title: "CV (PDF)"
     url: /CV_ZhenZhu.pdf/
