--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
     url: /portfolio/  
     
   - title: "CV (PDF)"
-    url: /CV_ZhenZhu.pdf/
+    url: /CV_ZhenZhu.pdf
     # url: /cv/
     
   # - title: "Teaching"
