--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,18 +8,21 @@ main:
   - title: "Publications"
     url: /publications/
 
-  # - title: "Talks"
-  #   url: /talks/    
-
   - title: "Awards"
     url: /awards/    
 
+  - title: "Projects"
+    url: /projects/  
+    
   - title: "Activities"
     url: /portfolio/  
     
   - title: "CV (PDF)"
     url: /CV_ZhenZhu.pdf
     # url: /cv/
+
+  # - title: "Talks"
+  #   url: /talks/  
     
   # - title: "Teaching"
   #   url: /teaching/    
